# sage

./: .gitignore  .tbls.yml  Cargo.toml  README.md  build-macos-dev.sh  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/sage-apps/: Cargo.toml
crates/sage-apps/builtin-apps/shared/: debug-tools.js  index.html
crates/sage-apps/builtin-apps/system-apps-src/: build.mjs  package.json  tsconfig.base.json  vite.config.ts
crates/sage-apps/src/: host.rs  lib.rs  storage.rs  types.rs  utils.rs
crates/sage-apps/src/bridge/: bridge_request.rs  capabilities.rs  commands.rs  event_emit.rs  events.rs  invoke.rs  mod.rs  registry.rs  state.rs  ts_exports.rs  types.rs
crates/sage-apps/src/lifecycle/: install.rs  limits.rs  manifest.rs  mod.rs  package.rs  registry.rs  snapshot.rs  storage.rs  storage_cleanup.rs  uninstall.rs  update.rs
crates/sage-apps/src/permissions/: capabilities.rs  commands.rs  mod.rs  policy.rs  validation.rs
crates/sage-apps/src/runtime/: cleanup.rs  commands.rs  inline.rs  locator.rs  manager.rs  mod.rs  records.rs  resolve.rs  start.rs  stop.rs  webview_locator.rs
crates/sage-apps/src/sandbox/: builtin_apps.rs  commands.rs  gate.rs  ingest.rs  runner.rs  runtime.rs  store.rs
crates/sage-apps/src/security/: csp.rs  protocol.rs
crates/sage-apps/src/state/: host.rs
crates/sage-apps/src/system_apps/: builtin_apps.rs  mod.rs
crates/sage-apps/src/types/: models.rs
crates/sage-apps/tests/: apps_install.rs  apps_manifest.rs  apps_registry.rs  apps_storage_cleanup.rs  apps_update.rs
doc/: Notes.md  combined.sql  (+2 more)
(+477 files in other folders)
