[package]
name = "sage-apps"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
sage = { workspace = true }
sage-api = { workspace = true, features = ["tauri"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = ["derive", "function"] }
specta-typescript = { workspace = true }
tauri = { workspace = true, features = [] }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
anyhow = { workspace = true }
hex = { workspace = true }
sha2 = "0.10.9"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tempfile = "3"
zip = "8.5.1"
mime_guess = "2"
url = "2"
async-trait = "0.1.89"

[dev-dependencies]
tempfile = { workspace = true }
